<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simeiscomet.objectsearcher.SettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setting_text_title"
            android:id="@+id/textView" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#ffaaaaaa"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/setting_text_projective_transformation"
            android:id="@+id/textProjectiveTransformation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#ff777777"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_check_multi_thread"
            android:id="@+id/checkMultiThread"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/setting_text_information"
            android:id="@+id/textInformation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#ff555555"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setting_text_thread_num"
            android:id="@+id/textThreadNum" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarThreadNum"
            android:indeterminate="false"
            android:max="9"
            android:progress="5" />

    </LinearLayout>
</RelativeLayout>
